# review-service/openapi.yaml
@@ -3,19 +3,19 @@
 
 openapi: 3.0.3
 info:
-    title: Reply API
+    title: Appeal API
     version: 0.0.1
 paths:
-    /v1/reply:
+    /v1/appeal:
         post:
             tags:
-                - Reply
-            operationId: Reply_CreateReply
+                - Appeal
+            operationId: Appeal_CreateAppeal
             requestBody:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/CreateReplyRequest'
+                            $ref: '#/components/schemas/CreateAppealRequest'
                 required: true
             responses:
                 "200":
@@ -23,7 +23,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/CreateReplyReply'
+                                $ref: '#/components/schemas/CreateAppealReply'
                 default:
                     description: Default error response
                     content:
@@ -32,17 +32,21 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
-        CreateReplyReply:
+        CreateAppealReply:
             type: object
             properties:
-                replyID:
+                appealID:
                     type: string
-        CreateReplyRequest:
+                status:
+                    type: string
+        CreateAppealRequest:
             type: object
             properties:
                 reviewID:
                     type: string
                 userID:
+                    type: string
+                reason:
                     type: string
                 content:
                     type: string
@@ -79,4 +83,4 @@ components:
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
 tags:
-    - name: Reply
+    - name: Appeal
